Corigido o POST no Swagger.
