# livraria/routes/livraria.js
@@ -1,4 +1,5 @@
 var express = require('express');
+const { is } = require('express/lib/request');
 const { route } = require('.');
 var router = express.Router();
 let con = require('../connection')
@@ -28,20 +29,13 @@ router.get('/livros/:id', (req, res) => {
     })
 });
 
-// async function existISBN(isbn, res, next) {
-//     const sqlGetById = "SELECT * from books where isbn = ?";
-//     await con.query(sqlGetById, isbn, (err, results) => {
-//         if (err) throw err
-//         console.log(results && results.length > 0)
-//         console.log(results.length)
-//         next()
-//     })
-// }
-
 // POST :: add a book
 router.post('/livros', async (req, res, next) => {
 
     const { isbn, title, description, author } = req.body
+
+    console.log('ISBN:', req.body)
+    // res.send(req.body)
 
     // Validate if already exist ISBN
     const sqlGetById = "SELECT * from books where isbn = ?";
@@ -55,74 +49,12 @@ router.post('/livros', async (req, res, next) => {
             const sql = "INSERT INTO books (isbn, title, description, author) VALUES (?, ?, ?, ?)";
             con.query(sql, [isbn, title, description, author], (err, results) => {
                 if (err) throw res.send(err)
-                res.status(200).send(results)
+                res.status(200).send({ ...results, message: results.affectedRows == 0 ? "Nenhum registo foi adicionado" : "Novo livro adicionado com sucesso" })
+
             })
         }
     })
-
-    // Validate ISBN
-    // existISBN(isbn, res, next).then((results) => {
-    //     console.log('existem ' + results + ' registos')
-    //     if (results.length > 0) {
-    //         console.log('entrou no true')
-    //         return res.status(401).json({ status: 'error', message: `Já existe um livro registado com o mesmo ISBN (${isbn}).` });
-    //     } else {
-    //         console.log('entrou no false')
-    //         // Accessing MySQL DB
-    //         const sql = "INSERT INTO books (isbn, title, description, author) VALUES (?, ?, ?, ?)";
-    //         con.query(sql, [isbn, title, description, author], (err, results) => {
-    //             if (err) throw res.send(err)
-    //             res.status(200).send(results)
-    //             // next()
-    //         })
-    //     }
-    // })
-
-    // Validate ISBN
-    // const alreadyExists = existISBN(isbn, res, next)
-    // console.log(alreadyExists)
-    // if (alreadyExists == true) {
-    //     console.log('entrou no true')
-    //     return res.status(401).json({ status: 'error', message: `Já existe um livro registado com o mesmo ISBN (${isbn}).` });
-    // } else {
-    //     console.log('entrou no false')
-    //     // Accessing MySQL DB
-    //     const sql = "INSERT INTO books (isbn, title, description, author) VALUES (?, ?, ?, ?)";
-    //     con.query(sql, [isbn, title, description, author], (err, results) => {
-    //         if (err) throw res.send(err)
-    //         res.status(200).send(results)
-    //         // next()
-    //     })
-    // }
-
-    // console.log(alreadyExists)
-    // if (alreadyExists == false) {
-    //   // Accessing MySQL DB
-    //   const sql = "INSERT INTO books (isbn, title, description, author) VALUES (?, ?, ?, ?)";
-    //   con.query(sql, [isbn, title, description, author], (err, results) => {
-    //     if (err) throw res.send(err)
-    //     res.status(200).send(results)
-    //     // next()
-    //   })
-    // }
-
-    // Tentativa 2 ::
-
-    // try {
-    //   // Validate ISBN
-    //   const alreadyExists = await existISBN(isbn)
-    //   if (alreadyExists == false) {
-    //     // Accessing MySQL DB
-    //     const sql = "INSERT INTO books (isbn, title, description, author) VALUES (?, ?, ?, ?)";
-    //     con.query(sql, [isbn, title, description, author], (err, results) => {
-    //       if (err) throw res.send(err)
-    //       res.send(results)
-    //     })
-    //   }
-    // } catch (error) {
-    //   res.json({ status: 'error', message: `Já existe um livro registado com o mesmo ISBN (${isbn}).` });
-    // }
-
+    
     // INSERT INTO books (isbn, title, description, author) VALUES (01112223339, 'Livro Teste', 'Um livro de teste.', 'Dante Marinho')
 });
 
@@ -132,11 +64,21 @@ router.put('/livros', (req, res) => {
 
     const { id, isbn, title, description, author } = req.body
 
-    // Accessing MySQL DB
-    const sql = "UPDATE books SET isbn = ?, title = ?, description = ?, author = ? WHERE id = ?";
-    con.query(sql, [isbn, title, description, author, id], (err, results) => {
-        if (err) throw res.send(err)
-        res.send(results)
+    // Validate if already exist ISBN
+    const sqlGetById = "SELECT * from books where isbn = ?";
+    con.query(sqlGetById, isbn, (err, results) => {
+        if (err) throw err
+
+        if (results.length > 0) {
+            res.status(401).json({ status: 'error', message: `Já existe um livro registado com o mesmo ISBN (${isbn}).` });
+        } else {
+            // Accessing MySQL DB
+            const sql = "UPDATE books SET isbn = ?, title = ?, description = ?, author = ? WHERE id = ?";
+            con.query(sql, [isbn, title, description, author, id], (err, results) => {
+                if (err) throw res.send(err)
+                res.send(results)
+            })
+        }
     })
 });
 
@@ -149,7 +91,7 @@ router.delete('/livros/:id', (req, res) => {
     const sql = "DELETE from books WHERE id = ?";
     con.query(sql, [req.params.id], (err, results) => {
         if (err) throw res.send(err)
-        res.send(results)
+        res.json({ ...results, message: results.affectedRows == 0 ? "O ID indicado não existe" : "Livro removido com sucesso" })
     })
 });
 
@@ -164,16 +106,28 @@ router.get('/livros/utils/restore', (req, res) => {
     // INSERT INITIAL VALUES
     con.query(
         `INSERT INTO books (id, isbn, title, description, author) VALUES
-    (1, 01112223334, 'Seja Bom', 'Um livro que fala como você pode ser uma pessoa melhor.', 'Dante Marinho'),
-    (2, 01112223335, 'Fábicra de Vencedores', 'Destinado às pessoas com forte vertente empreendedora, ou que almejam essa conquista.', 'Janguiê Diniz'),
-    (3, 01112223336, 'The Duck Donad', 'A história de como surgiu um dos personagens mais caricatos que alguma vez já existiu.', 'Paul Erold'),
-    (4, 01112223337, 'The Beatles History', 'A história completa da vida e do surgimento do grupo que foi amado por todo o mundo.', NULL),
-    (5, 01112223338, 'Foco', 'Aprenda a como realizar taregas e finalizá-las.', NULL)`,
+        (1, 01112223334, 'Seja Bom', 'Um livro que fala como você pode ser uma pessoa melhor.', 'Dante Marinho'),
+        (2, 01112223335, 'Fábicra de Vencedores', 'Destinado às pessoas com forte vertente empreendedora, ou que almejam essa conquista.', 'Janguiê Diniz'),
+        (3, 01112223336, 'The Duck Donad', 'A história de como surgiu um dos personagens mais caricatos que alguma vez já existiu.', 'Paul Erold'),
+        (4, 01112223337, 'The Beatles History', 'A história completa da vida e do surgimento do grupo que foi amado por todo o mundo.', NULL),
+        (5, 01112223338, 'Foco', 'Aprenda a como realizar taregas e finalizá-las.', NULL)`,
         (err, results) => {
             if (err) throw res.send(err)
             res.send(results)
         }
     )
 })
+
+// Auxiliar funcitons
+
+// async function existISBN(isbn, res, next) {
+//     const sqlGetById = "SELECT * from books where isbn = ?";
+//     await con.query(sqlGetById, isbn, (err, results) => {
+//         if (err) throw err
+//         console.log(results && results.length > 0)
+//         console.log(results.length)
+//         next()
+//     })
+// }
 
 module.exports = router;
